--- a/openscc/mimir/templates/mimirBase.html
+++ b/openscc/mimir/templates/mimirBase.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/svg" href="{% static 'assets/icon/favicon.svg' %}"/>      
+    <link rel="shortcut icon" type="image/svg" href="{% static 'media/images/mimir_logo_head.png' %}"/>      
     
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -545,7 +545,7 @@
             <div class="sidebar-header">
                 {% block brandImage %}
                 <a href="{% url 'mimir:redirecionarPorGrupo' %}" class="sidebar-brand">
-                    <img src="{% static 'media/images/logo_openscc.png' %}" alt="Mimir Logo">
+                    <img src="{% static 'media/images/mimir_logo_head.png' %}" alt="Mimir Logo">
                     <span>Mimir</span>
                 </a>
                 {% endblock %}
