--- a/openscc/mimir/templates/mimir/editarAplicacaoProva.html
+++ b/openscc/mimir/templates/mimir/editarAplicacaoProva.html
@@ -100,7 +100,7 @@
                         </div>
 
                         <div class="d-flex justify-content-between">
-                            <a href="{% url 'mimir:detalhes_aplicacao_prova' aplicacao.id %}" class="btn btn-secondary">
+                            <a href="{% url 'mimir:detalhesAplicacaoProva' aplicacao.id %}" class="btn btn-secondary">
                                 <i class="fas fa-arrow-left me-1"></i>Cancelar
                             </a>
                             <button type="submit" class="btn btn-warning">
