--- a/openscc/mimir/templates/mimir/acessoNegado.html
+++ b/openscc/mimir/templates/mimir/acessoNegado.html
@@ -33,7 +33,7 @@
                     
                     <div class="mt-4">
                         {% if user.is_authenticated %}
-                            <a href="{% url 'mimir:redirecionar_por_grupo' %}" class="btn btn-primary me-2">
+                            <a href="{% url 'mimir:redirecionarPorGrupo' %}" class="btn btn-primary me-2">
                                 <i class="fas fa-home"></i> Ir para Minha Área
                             </a>
                             <a href="{% url 'logout' %}" class="btn btn-outline-secondary">
